Alignment fix

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,10 +2,6 @@
     padding: 2rem 16rem;
 }
 
-#about h3 {
-    padding: 1rem 0;
-}
-
 @media screen and (max-width: 768px) {
     #about {
         padding: 2rem 1rem;
@@ -57,10 +53,10 @@
 .about-right {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
 }
 
 .experience-container {
+    padding: 1rem 1rem 2rem 1rem;
     display: flex;
     flex-direction: column;
 }
@@ -98,7 +94,7 @@
 }
 
 .education-container {
-    padding-top: 1rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -150,6 +146,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding: 0 1rem 1rem 1rem;
     background-color: rgba(0, 0, 0, 0);
 }
