--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -34,6 +34,7 @@
     .project-card {
         grid-template-columns: 1fr;
         text-align: center;
+        gap: 0;
     }
 }
 
@@ -47,6 +48,7 @@
     .project-card {
         grid-template-columns: 1fr;
         text-align: center;
+        gap: 0;
     }
 }
 
